[package]
name = "methylation_distributions"
version = "0.1.0"
edition = "2024"

[dependencies]
hypors = { git = "https://github.com/astronights/hypors", branch = "main" }
itertools = "0.14.0"
polars = { version = "0.46.0", features = ["lazy", "is_in", "strings", "regex", "rows"] }
polars-rows-iter = "0.9.2"
rand = "0.9.0"
wide = "0.7.32"
